6-12-13 | 7:53 PM | 1st Working Version
- changed file system to include "risk" folder
gatech/cs2340team2/risk/model
- changed file system folder "cs2340-team2" -> "cs2340team2" to avoid
java package problems with hyphens
- implemented + upgraded build file ('ant main' to do all at once)
- basic functionality on RiskServlet.java & start.jsp

--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
-<project name="todo" default="compile" basedir=".">
+<project name="risk" default="compile" basedir=".">
 
   <property environment="env"/>
-  <property name="app.name"      value="todo"/>
+  <property name="app.name"      value="risk"/>
   <property name="app.path"      value="/${app.name}"/>
   <property name="app.version"   value="0.1-dev"/>
   <property name="build.home"    value="${basedir}/target"/>
@@ -51,5 +51,7 @@
       <fileset dir="${build.home}"/>
     </copy>    
   </target>
+  
+  <target name="main" depends="clean, deploy" />
 
 </project>
