fixed test so it can be run with ant

--- a/build.xml
+++ b/build.xml
@@ -6,9 +6,12 @@
   <property name="app.version"   value="0.1-dev"/>
   <property name="build.home"    value="${basedir}/target"/>
   <property name="catalina.home" value="${env.CATALINA_HOME}"/>
-  <property name="src.home"      value="${basedir}/src/main/"/>
+  <property name="src.main"      value="${basedir}/src/main/"/>
+  <property name="src.test"      value="${basedir}/src/test/"/>
   <property name="web.home"      value="${basedir}/web"/>
   <property name="lib.home"      value="${basedir}/libs"/>
+  <property name="dir.reports"   value="${basedir}/target/reports/"/>
+ 
   <property name="tomcat.url" value="http://localhost:8080/${app.name}"/> 
 
   <path id="compile.classpath">
@@ -18,13 +21,13 @@
       <include name="*.jar"/>
     </fileset>
     <pathelement location="${catalina.home}/lib"/>
-    <fileset dir="${catalina.home}/lib">
+    <fileset dir="${catalina.home}/lib/">
       <include name="*.jar"/>
     </fileset>
     <fileset dir="${lib.home}">
-      <include name="*.jar"/>
+      <include name="*/*.jar"/>
     </fileset>
-
+    <pathelement path="${build.home}/WEB-INF/classes" />
   </path>
 
   <target name="clean" description="Delete old build and dist directories">
@@ -35,7 +38,7 @@
 
     <!-- Compile Java classes as necessary -->
     <mkdir    dir="${build.home}/WEB-INF/classes"/>
-    <javac srcdir="${src.home}"
+    <javac srcdir="${src.main}"
            destdir="${build.home}/WEB-INF/classes"
            includeAntRuntime="false">
         <classpath refid="compile.classpath"/>
@@ -45,12 +48,41 @@
 
   <target name="prepare" depends="compile">
     <copy  todir="${build.home}">
-      <fileset dir="${src.home}/webapp"/>
+      <fileset dir="${src.main}/webapp"/>
     </copy>
     <mkdir dir="${build.home}/WEB-INF/lib"/>
     <copy todir="${build.home}/WEB-INF/lib">
-      <fileset dir="${lib.home}"/>
+      <fileset dir="${lib.home}/main"/>
     </copy>
+  </target>
+
+  <target name="compile-tests" depends="compile" description="Compile tests">
+
+    <!-- Compile Java classes as necessary -->
+    <mkdir    dir="${build.home}/WEB-INF/classes"/>
+    <javac srcdir="${src.test}"
+          destdir="${build.home}/WEB-INF/classes">
+        <classpath refid="compile.classpath"/>
+    </javac>
+
+  </target>
+
+  <target name="test" depends="compile-tests">
+    <mkdir    dir="${dir.reports}"/>
+    <junit printsummary="yes" haltonfailure="no">
+      
+      <classpath refid="compile.classpath"/>
+      
+      <formatter type="plain"/>
+
+      <batchtest fork="yes" todir="${dir.reports}">
+        <fileset dir="${src.test}/java">
+          <include name="**/*Test.java"/>
+        </fileset>
+      </batchtest>
+      
+    </junit>
+    
   </target>
 
   <target name="deploy" depends="prepare">
@@ -100,39 +132,5 @@
           <arg value="/c" />
           <arg value="startup.bat"/>    
       </exec>
-  </target>
-  
-  <!--
-  <property name="tomcat.manager.url" value="http://localhost:8080/manager"/>
-  <property name="tomcat.manager.username" value="admin-gui"/>
-  <property name="tomcat.manager.password" value="risk"/>
-  -->   
-  
-  <!-- 
-  <taskdef  name="start" classname="org.apache.catalina.ant.StartTask">
-      <classpath>
-          <path location="${catalina.home}/lib/catalina-ant.jar" />
-      </classpath>
-  </taskdef>
-  
-  <taskdef  name="stop" classname="org.apache.catalina.ant.StopTask">
-      <classpath>
-          <path location="${catalina.home}/lib/catalina-ant.jar" />
-      </classpath>
-  </taskdef>
-
-  <taskdef  name="reload" classname="org.apache.catalina.ant.ReloadTask">
-      <classpath>
-          <path location="${catalina.home}/lib/catalina-ant.jar" />
-      </classpath>
-  </taskdef>  
-  
-  <target name="tomcat.start" >
-      <start url="${tomcat.manager.url}"
-          username="${tomcat.manager.username}"
-          password="${tomcat.manager.password}"
-          path="/${app.name}" />
-  </target>
-  -->
-
+  </target>  
 </project>
